[tool.poetry]
name = "samsara"
version = "0.1.0"
description = ""
authors = ["Adrian Edwards <adrian@adriancedwards.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^15.0"
selenium = "^4.29.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
